# BeeBeep

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: release.yml  rust.yml
src/: cli.yml  example.env  main.rs
