[package]
name = "beebeep"
version = "0.1.0"
authors = ["zhizha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
log = "0.4.8"
tokio = "0.2.11"
pretty_env_logger = "0.4.0"
clap = "~2.27.0"
dotenv = "0.15.0"
