[package]
name = "beebeep"
version = "0.1.0"
authors = ["zhizha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.5.0"
log = "0.4.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
clap = {version = "~2.27.0", features = ["yaml"]}
dotenv = "0.15.0"
notifica = "3.0"
