[package]
name = "beebeep"
version = "0.1.1"
authors = ["Zhishan Zhang <zhangzhishanlo@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["notification", "commnad", "shell"]
categories = ["command-line-utilities"]
description = "BeeBeep is a very very easy tool to notify me after some command finished."

[dependencies]
teloxide = "0.5.0"
log = "0.4.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
clap = {version = "~2.27.0", features = ["yaml"]}
dotenv = "0.15.0"
notifica = "3.0"
